// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterButtonGroup attempts stake transaction on continue click 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <View
    accessibilityLabel="Cancel"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#b4b4b528",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 0.5,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#131416",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    accessibilityHint="Button is currently loading, please wait"
    accessibilityLabel="Continue"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": true,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#414243",
          "borderRadius": 12,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 0.5,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="continue-button"
  >
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="spinner-container"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="spinner-animated-view"
        >
          <SvgMock
            fill="currentColor"
            name="Loading"
            style={
              [
                {
                  "color": "#ffffff",
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
            testID="spinner-icon"
          />
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "opacity": 0,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`FooterButtonGroup attempts unstake transaction on continue click 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <View
    accessibilityLabel="Cancel"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#b4b4b528",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 0.5,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#131416",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    accessibilityHint="Button is currently loading, please wait"
    accessibilityLabel="Continue"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": true,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#414243",
          "borderRadius": 12,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 0.5,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="continue-button"
  >
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="spinner-container"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="spinner-animated-view"
        >
          <SvgMock
            fill="currentColor"
            name="Loading"
            style={
              [
                {
                  "color": "#ffffff",
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
            testID="spinner-icon"
          />
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "opacity": 0,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`FooterButtonGroup navigates to Asset page when cancel is pressed 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <View
    accessibilityLabel="Cancel"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#b4b4b528",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 1,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#131416",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    accessibilityLabel="Continue"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#131416",
          "borderRadius": 12,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 1,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="continue-button"
  >
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`FooterButtonGroup render matches snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <View
    accessibilityLabel="Cancel"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#b4b4b528",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 1,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#131416",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    accessibilityLabel="Continue"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#131416",
          "borderRadius": 12,
          "columnGap": 8,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 1,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 0,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="continue-button"
  >
    <Text
      accessibilityRole="text"
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "flexGrow": 0,
            "flexShrink": 1,
            "flexWrap": "wrap",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;
